--- a/views/index.html
+++ b/views/index.html
@@ -5,29 +5,31 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+   </div>
+  <div class="alert alert-danger alert-dismissable">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+    <strong>Warning!</strong> Stop buying shit.
+  </div>
   <div style="margin:100px;">
     <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container">
-    <a class="navbar-brand" href="/index">Team 50</a>
-    <ul class="nav navbar-nav">
-      <li class="active">
-        <a href="/index">Home</a>
-      </li>
-      <li>
-        <a href="/about">About</a>
-      </li>
-      <li>
-        <a href="/product">Product</a>
-      </li>
-    </ul>
+    <a class="navbar-brand">Team 50</a>
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <h1>Hello, world!</h1>
-      <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <p>Add chart here.</p>
     </div>
+  </div>
+  <div style="margin:100px; max-width: 40%;">
+  	<div class="jumbotron" style="padding:8px">
+  		<p>Purchase: -----</p>
+  		<p>Price: $-----</p>
+  	</div>
   </div>
 </body>
 </html>
