--- a/views/index.html
+++ b/views/index.html
@@ -10,10 +10,10 @@
   <div style="margin:100px;">
     <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container">
-    <a class="navbar-brand" href="/">Team 50</a>
+    <a class="navbar-brand" href="/index">Team 50</a>
     <ul class="nav navbar-nav">
       <li class="active">
-        <a href="/">Home</a>
+        <a href="/index">Home</a>
       </li>
       <li>
         <a href="/about">About</a>
