--- a/views/index.html
+++ b/views/index.html
@@ -10,12 +10,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-   </div>
   <div class="alert alert-danger alert-dismissable">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
     <strong>Warning!</strong> Stop buying shit.
   </div>
-  <div style="margin:100px;">
+  <div style="margin:50px;">
     <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container">
     <a class="navbar-brand">Team 50</a>
@@ -25,11 +24,19 @@
       <p>Add chart here.</p>
     </div>
   </div>
-  <div style="margin:100px; max-width: 40%;">
-  	<div class="jumbotron" style="padding:8px">
-  		<p>Purchase: -----</p>
-  		<p>Price: $-----</p>
-  	</div>
-  </div>
+  <div class="container">
+    <div class="row">
+        <div class="form-group name1 col-md-6">
+            <label for="exampleInputEmail1" class="formText">Purchase</label>
+            <input type="text" class="form-control" aria-describedby="basic-addon2">
+        </div>
+
+        <div class="form-group name2 col-md-6">
+            <label for="exampleInputEmail1## Heading ##" class="formText">Price</label>
+            <input type="text" class="form-control" aria-describedby="basic-addon2">
+        </div>
+    </div>
+</div>
+</div>
 </body>
 </html>
