Update css and index.html

--- a/views/index.css
+++ b/views/index.css
@@ -11,14 +11,12 @@
 }
 
 .footer.container {
-	padding: 50px;
+	padding: 10px 50px;
 }
 
 #footer {
-    clear: both;
-    position: relative;
-    z-index: 10;
-    height: 3em;
-    margin-top: -3em;
-    background-color: grey;
+    background-color: beige;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
