--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="index.css" media="all">
 </head>
 <body>
   <div class="alert alert-danger alert-dismissable">
@@ -23,8 +24,15 @@
     <div class="jumbotron"  style="padding:40px;">
       <p>Add chart here.</p>
     </div>
-  </div>
-  <div class="container">
+  
+
+	<div class="container outlet">
+		<p>Add results here.</p>
+	</div>
+</div>
+
+  <div class="footer" id="footer">
+  <div class="footer container">
     <div class="row">
         <div class="form-group name1 col-md-6">
             <label for="exampleInputEmail1" class="formText">Purchase</label>
