--- a/views/index.html
+++ b/views/index.html
@@ -34,15 +34,19 @@
   <div class="footer" id="footer">
   <div class="footer container">
     <div class="row">
-        <div class="form-group name1 col-md-6">
+        <div class="form-group name1 col-md-5">
             <label for="exampleInputEmail1" class="formText">Purchase</label>
             <input type="text" class="form-control" aria-describedby="basic-addon2">
         </div>
 
-        <div class="form-group name2 col-md-6">
+        <div class="form-group name2 col-md-5">
             <label for="exampleInputEmail1## Heading ##" class="formText">Price</label>
             <input type="text" class="form-control" aria-describedby="basic-addon2">
         </div>
+
+        <div class="button col-md-2">
+        	<button type="button" class="btn btn-info">Submit</button>
+    	</div>
     </div>
 </div>
 </div>
