--- a/views/product.html
+++ b/views/product.html
@@ -13,10 +13,7 @@
     <a class="navbar-brand" href="/index">Team 50</a>
     <ul class="nav navbar-nav">
       <li>
-        <a href="/index">Home</a>
-      </li>
-      <li>
-        <a href="/about">About</a>
+        <a href="/main">Home</a>
       </li>
       <li class="active">
         <a href="/product">Product</a>
