Switch to include static pages

--- a/views/index.css
+++ b/views/index.css
@@ -24,3 +24,14 @@
 .button {
     padding: 25px;
 }
+
+.alert {
+    display: none;
+}
+
+#container {
+    min-width: 310px;
+    max-width: 800px;
+    height: 400px;
+    margin: 0 auto
+}
