--- a/views/index.html
+++ b/views/index.html
@@ -8,10 +8,16 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+
+<div id="container"></div>
+
+
   <link rel="stylesheet" href="index.css" media="all">
 </head>
 <body>
-  <div class="alert alert-danger alert-dismissable">
+  <div class="alert alert-danger alert-dismissable" id="warning">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
     <strong>Warning!</strong> Stop buying shit.
   </div>
@@ -36,19 +42,20 @@
     <div class="row">
         <div class="form-group name1 col-md-5">
             <label for="exampleInputEmail1" class="formText">Purchase</label>
-            <input type="text" class="form-control" aria-describedby="basic-addon2">
+            <input type="text" class="form-control" aria-describedby="basic-addon2" id="purchaseInput">
         </div>
 
         <div class="form-group name2 col-md-5">
             <label for="exampleInputEmail1## Heading ##" class="formText">Price</label>
-            <input type="text" class="form-control" aria-describedby="basic-addon2">
+            <input type="text" class="form-control" aria-describedby="basic-addon2" id="priceInput">
         </div>
 
         <div class="button col-md-2">
-        	<button type="button" class="btn btn-info">Submit</button>
+        	<button type="button" class="btn btn-info" onclick="submit()">Submit</button>
     	</div>
     </div>
 </div>
 </div>
+ <script src="index.js"></script>
 </body>
 </html>
