--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
 <div id="container"></div>
 
 
-  <link rel="stylesheet" href="index.css" media="all">
+  <link rel="stylesheet" href="main.css" media="all">
 </head>
 <body>
   <div class="alert alert-danger alert-dismissable" id="warning">
@@ -56,6 +56,6 @@
     </div>
 </div>
 </div>
- <script src="index.js"></script>
+ <script src="views/main.js"></script>
 </body>
 </html>
