--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
 
   <link rel="stylesheet" href="/main.css" media="all">
 </head>
@@ -23,13 +25,94 @@
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-        <div id="container"></div>
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-      <script src="https://code.highcharts.com/modules/exporting.js"></script>
+      <div id="container"></div>
     </div>
 
 	<div class="container outlet">
-		<p>Add results here.</p>
+	<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Item Name</th>
+      <th>Date of transaction</th>
+      <th>Amount</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Interest Payment</td>
+      <td>12/21/2015</td>
+      <td>$22.00</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Interest Payment</td>
+      <td>11/02/2015</td>
+      <td>$32.00</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Uber Fare</td>
+      <td>10/21/2015</td>
+      <td>$6.66</td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td>Pizzaaaa</td>
+      <td>09/21/2015</td>
+      <td>$10.10</td>>
+    </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td>Red Wine</td>
+      <td>08/15/2015</td>
+      <td>$5.00</td>
+    </tr>
+    <tr>
+      <th scope="row">6</th>
+      <td>Coldplay tickets</td>
+      <td>07/21/2015</td>
+      <td>$45.00</td>
+    </tr>
+    <tr>
+      <th scope="row">7</th>
+      <td>Leather Seats</td>
+      <td>06/08/2015</td>
+      <td>$30.00</td>
+    </tr>
+    <tr>
+      <th scope="row">8</th>
+      <td>Magic Carpet</td>
+      <td>05/21/2015</td>
+      <td>$9.11</td>
+    </tr>
+    <tr>
+      <th scope="row">9</th>
+      <td>iPhone X</td>
+      <td>04/21/2015</td>
+      <td>$49.99</td>
+    </tr>
+    <tr>
+      <th scope="row">10</th>
+      <td>Car Rental</td>
+      <td>03/21/2015</td>
+      <td>$23.00</td>
+    </tr>
+    <tr>
+      <th scope="row">11</th>
+      <td>Doritos</td>
+      <td>02/11/2015</td>
+      <td>$5.45</td>
+    </tr>
+    <tr>
+      <th scope="row">12</th>
+      <td>Weed Stash</td>
+      <td>29/01/2015</td>
+      <td>$50.00</td>
+    </tr>   
+  </tbody>
+</table>
 	</div>
 </div>
 
