--- a/views/main.css
+++ b/views/main.css
@@ -1,7 +1,7 @@
 .container.outlet {
     box-shadow: 0px 5px 20px 5px rgba(0,0,0,0.2);
     width: 1100px;
-    height: 100vh;
+    height: 600px;
     margin: 0 auto;
     background-color: white; 
     padding-top: 15px;
