--- a/views/main.css
+++ b/views/main.css
@@ -1,7 +1,7 @@
 .container.outlet {
     box-shadow: 0px 5px 20px 5px rgba(0,0,0,0.2);
     width: 1100px;
-    height: 600px;
+    height: 550px;
     margin: 0 auto;
     background-color: white; 
     padding-top: 15px;
@@ -16,7 +16,7 @@
 
 #footer {
     background-color: beige;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
