Add page breaks after table

--- a/views/index.html
+++ b/views/index.html
@@ -19,16 +19,17 @@
     <strong>Warning!</strong> Stop buying shit.
   </div>
   <div style="margin:50px;">
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-inverse navbar-static-top" style="z-index: -1">
   <div class="container">
     <a class="navbar-brand">Team 50</a>
   </div>
 </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <div id="container"></div>
+      <div id="container" style="z-index: -1"></div>
     </div>
 
 	<div class="container outlet">
+		<p id="score">Good job! Your current sentiment score is <strong>75 </strong></p>
 	<table class="table table-striped">
   <thead>
     <tr>
@@ -115,7 +116,7 @@
 </table>
 	</div>
 </div>
-
+<br><br><br><br>
   <div class="footer" id="footer">
   <div class="footer container">
     <div class="row">
